--- a/root/views/layout.jade
+++ b/root/views/layout.jade
@@ -4,7 +4,7 @@ html
   head
     meta(charset='utf8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge, chrome=1')
-    meta(name='description', content='Mexico')
+    meta(name='description', content='<%= description %>')
     meta(name='author', content= "Paul Cravayat")
     meta(name="viewport" content="width=device-width, initial-scale=1")
     
@@ -13,16 +13,16 @@ html
     link(rel="apple-touch-icon-precomposed" sizes="152x152" href="/apple-touch-icon.png")
 
     //- meta(property="og:url" content="")
-    meta(property="og:title" content="Mexico")
-    meta(property="og:description" content="Cartes postales sonores d'un voyage au Mexique")
+    meta(property="og:title" content="<%= name %>")
+    meta(property="og:description" content="<%= description %>")
     meta(property="og:image" content="/img/share.png")
 
     //- Twitter card infos
     meta(name="twitter:card" content="summary_large_image")
-    meta(name="twitter:title" content="Mexico")
-    meta(name="twitter:description" content="Cartes postales sonores d'un voyage au Mexique")
+    meta(name="twitter:title" content="<%= name %>")
+    meta(name="twitter:description" content="<%= description %>")
     meta(name="twitter:image" content="/img/share.png")
-    title SLASHSLASH
+    title <%= name %>
     != css()
 
   body
